fixed padding and spacing issues for intro and project containers

--- a/src/components/intro.module.css
+++ b/src/components/intro.module.css
@@ -1,14 +1,19 @@
-.intro-container {
-    padding-top: 5%;
+.introContainer {
+    padding: 5%;
+    background-color: #ffffff;
+    width: 100%;
+    height: 100%;
 }
 .greeting {
     font-size: 80px;
 }
 
+h2 {
+    font-size: 60px;
+}
+
 .name {
     color: #A64941;
     font-size: 100px;
-    font-weight: 500;
-    margin: 0
 }
 
