--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,5 @@
 html, 
-body
+body,
 #___gatsby {
     width: 100%;
     height: 100%;
@@ -7,10 +7,7 @@ body
     padding: 0;
 }   
 
-body {
-    background-color: #f8f8f8;
-}
-
 h1,h2,h3, h4, h5, h6 {
     font-family: 'Marcellus', serif;
+    margin: 5px;
 }
